@@ -76,6 +76,7 @@
     * 4127 FIX: Fixed possible "maximum recursion depth exceeded" error when sorting tables with a lot of text in cells
     * 4128 FIX: Fixed exception in "Virtual host tree" snapin in case a user tries to access a not existing tree
     * 4129 FIX: Fixed possible exception when a view is linking to a not permitted other view
+    * 4137 FIX: List of strings: New fields are now added when last field is not empty...
 
     WATO:
     * 3984 Permissions can now be filtered by providing a search term on the "edit role" page...
